adding ignore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
 .DS_Store
+ASMock/.settings/com.adobe.flexbuilder.project.prefs
+ASMockFlexUnit4/.settings/com.adobe.flexbuilder.project.prefs
+ASMockFlexUnit4/.settings/org.eclipse.ltk.core.refactoring.prefs
